# SOFTX-D-22-00072

./: LICENSE  README.md
HiVecMap_code/: CMakeLists.txt  buildIndex.sh  dump.rdb  plotting.sh  stop.sh
HiVecMap_code/flask/: release.py
HiVecMap_code/flask/templates/: HiVecMap.html
HiVecMap_code/include/: Redis.h  VPQTreeNode.hpp  VPQTreeNodeS.hpp  buildVPQTree.hpp  plotTile.hpp
HiVecMap_code/src/: TMS_server.cpp  VPQTreeNode.cpp  VPQTreeNodeS.cpp  buildIndex_main.cpp  buildVPQTree.cpp  plotTile.cpp  plotting_main.cpp
